Migrate to JUnit 5

--- a/build.gradle
+++ b/build.gradle
@@ -6,14 +6,20 @@ subprojects {
     }
 
     dependencies {
-        testCompile 'junit:junit:4.12'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.1'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.1'
+
         testCompile 'org.assertj:assertj-core:3.6.2'
+    }
+
+    test {
+        useJUnitPlatform()
     }
 
     task printResults(type: Test) {
         group = 'verification'
-        filter {
-            includeTestsMatching "lt.ktriponis.euler.problem1*.*Test.result"
+        useJUnitPlatform {
+            includeTags 'result'
         }
         outputs.upToDateWhen { false }
     }
