--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,10 @@
+plugins {
+    id 'com.github.kt3k.coveralls' version '2.8.2'
+}
+
 subprojects {
     apply plugin: 'java'
+    apply plugin: 'jacoco'
 
     repositories {
         jcenter()
