--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: java
+
 jdk:
   - openjdk12
+
 after_success:
-  - ./gradlew jacocoTestReport coveralls
+  - ./gradlew jacocoRootReport coveralls
