--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 allprojects {
-    apply plugin: 'java'
+    apply plugin: 'base'
     apply plugin: 'jacoco'
 
     repositories {
@@ -12,6 +12,8 @@ allprojects {
 }
 
 subprojects {
+    apply plugin: 'java'
+
     dependencies {
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.1'
         testImplementation 'org.assertj:assertj-core:3.12.2'
